# softvector

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
doc/: doxyfile.in
include/vpu/: softvector-types.hpp
src/vpu/: softvector-element.cpp  softvector-register.cpp  softvector-vector.cpp
